--- a/client/src/app/routing/search/search.component.css
+++ b/client/src/app/routing/search/search.component.css
@@ -26,3 +26,12 @@
   position: absolute;
   right: 15px;
 }
+
+.mat-card-date {
+  position: absolute;
+  right: 45px;
+}
+
+::ng-deep .line-broken-tooltip {
+  white-space: pre-line;
+}
