--- a/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
+++ b/client/src/app/modules/quotation/components/domiciliation/domiciliation.component.html
@@ -351,5 +351,8 @@
     <mat-tab label="Historique" *ngIf="domiciliation && domiciliation.id">
       <history [entity]="domiciliation" [entityType]="DOMICILIATION_ENTITY_TYPE"></history>
     </mat-tab>
+    <mat-tab label="Historique (prestation)" *ngIf="provision && provision.id">
+      <history [entity]="provision" [entityType]="PROVISION_ENTITY_TYPE"></history>
+    </mat-tab>
   </mat-tab-group>
 </form>
