--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -143,75 +143,87 @@
         </ng-container>
       </table>
     </form>
-    <table class="mat-table mat-mdc-table mdc-data-table__table total-table  full-width">
-      <thead>
-        <tr class="mat-mdc-header-row mdc-data-table__header-row ">
-          <th class="mat-mdc-header-cell mdc-data-table__header-cell " colspan="2">Total</th>
-        </tr>
-      </thead>
-      <tr class="mat-mdc-row mdc-data-table__row ">
+  </fieldset>
+  <table class="mat-table mat-mdc-table mdc-data-table__table total-table  full-width">
+    <thead>
+      <tr class="mat-mdc-header-row mdc-data-table__header-row ">
+        <th class="mat-mdc-header-cell mdc-data-table__header-cell " colspan="2">Total</th>
+      </tr>
+    </thead>
+    <tr class="mat-mdc-row mdc-data-table__row ">
+      <td class="mat-mdc-cell mdc-data-table__cell ">
+        Prix total HT
+      </td>
+      <td class="mat-mdc-cell mdc-data-table__cell  td-price ">
+        {{getPreTaxPriceTotal() |number}} €
+      </td>
+    </tr>
+    <tr class="mat-mdc-row mdc-data-table__row " *ngIf="getDiscountTotal() && getDiscountTotal()>0">
+      <td class="mat-mdc-cell mdc-data-table__cell ">
+        Remise totale
+      </td>
+      <td class="mat-mdc-cell mdc-data-table__cell  td-price remise ">
+        - {{getDiscountTotal()|number}} €
+      </td>
+    </tr>
+    <tr class="mat-mdc-row mdc-data-table__row " *ngIf="getDiscountTotal() && getDiscountTotal()>0">
+      <td class="mat-mdc-cell mdc-data-table__cell ">
+        Total HT avec remise
+      </td>
+      <td class="mat-mdc-cell mdc-data-table__cell  td-price ">
+        {{getPreTaxPriceTotal()-getDiscountTotal()|number}} €
+      </td>
+    </tr>
+    <ng-container *ngIf="getApplicableVat().length>0">
+      <tr *ngFor="let vat of getApplicableVat()">
         <td class="mat-mdc-cell mdc-data-table__cell ">
-          Prix total HT
+          Total {{vat.label}} sur la base de {{vat.base |number}} €
         </td>
         <td class="mat-mdc-cell mdc-data-table__cell  td-price ">
-          {{getPreTaxPriceTotal() |number}} €
+          {{vat.total|number}} €
         </td>
       </tr>
-      <tr class="mat-mdc-row mdc-data-table__row " *ngIf="getDiscountTotal() && getDiscountTotal()>0">
-        <td class="mat-mdc-cell mdc-data-table__cell ">
-          Remise totale
-        </td>
-        <td class="mat-mdc-cell mdc-data-table__cell  td-price remise ">
-          - {{getDiscountTotal()|number}} €
-        </td>
-      </tr>
-      <tr class="mat-mdc-row mdc-data-table__row " *ngIf="getDiscountTotal() && getDiscountTotal()>0">
-        <td class="mat-mdc-cell mdc-data-table__cell ">
-          Total HT avec remise
-        </td>
-        <td class="mat-mdc-cell mdc-data-table__cell  td-price ">
-          {{getPreTaxPriceTotal()-getDiscountTotal()|number}} €
-        </td>
-      </tr>
-      <ng-container *ngIf="getApplicableVat().length>0">
-        <tr *ngFor="let vat of getApplicableVat()">
-          <td class="mat-mdc-cell mdc-data-table__cell ">
-            Total {{vat.label}} sur la base de {{vat.base |number}} €
+    </ng-container>
+    <tr class="mat-mdc-row mdc-data-table__row ">
+      <td class="mat-mdc-cell mdc-data-table__cell ">
+        Total TTC
+      </td>
+      <td class="mat-mdc-cell mdc-data-table__cell  td-price ">
+        {{getPriceTotal()|number}} €
+      </td>
+    </tr>
+    <ng-container *ngIf="instanceOfCustomerOrderFn(quotation) && getCurrentInvoiceForCustomerOrder()==undefined">
+      <tr class="mat-mdc-row mdc-data-table__row " *ngFor="let deposit of quotation.payments">
+        <ng-container *ngIf="!deposit.isCancelled">
+          <td class="mat-mdc-cell mdc-data-table__cell  payment-label" [matTooltip]="deposit.label">
+            <button matTooltip="Actions" mat-button color="accent" [matMenuTriggerFor]="menu">
+              <mat-icon>more_vert</mat-icon>
+              <mat-menu #menu="matMenu" style="min-height: 0px;padding: 0;" xPosition="before">
+                <button mat-menu-item (click)="movePayment(deposit)">
+                  <mat-icon>move_up</mat-icon><span>Déplacer le paiement</span>
+                </button>
+                <button mat-menu-item (click)="openPaymentDialog(deposit)">
+                  <mat-icon>visibility</mat-icon><span>Voir le détail du paiement</span>
+                </button>
+                <button mat-menu-item (click)="movePaymentToWaitingAccount(deposit)"
+                  *ngIf="canMovePaymentToWaitingAccount()">
+                  <mat-icon>hourglass_empty</mat-icon><span>Déplacer dans le compte d'attente</span>
+                </button>
+              </mat-menu>
+            </button>
+            N°{{deposit.id}} du {{formatDate(deposit.paymentDate)}} - {{deposit.label}}
           </td>
           <td class="mat-mdc-cell mdc-data-table__cell  td-price ">
-            {{vat.total|number}} €
+            - {{deposit.paymentAmount|number}} €
           </td>
-        </tr>
-      </ng-container>
-      <tr class="mat-mdc-row mdc-data-table__row ">
-        <td class="mat-mdc-cell mdc-data-table__cell ">
-          Total TTC
-        </td>
-        <td class="mat-mdc-cell mdc-data-table__cell  td-price ">
-          {{getPriceTotal()|number}} €
-        </td>
+        </ng-container>
       </tr>
-      <ng-container *ngIf="instanceOfCustomerOrderFn(quotation) && getCurrentInvoiceForCustomerOrder()==undefined">
-        <tr class="mat-mdc-row mdc-data-table__row " *ngFor="let deposit of quotation.payments">
-          <ng-container *ngIf="!deposit.isCancelled">
-            <td class="mat-mdc-cell mdc-data-table__cell  payment-label" [matTooltip]="deposit.label">
-              Acompte n°{{deposit.id}} - {{deposit.label}} (<span class="pointer"
-                (click)="movePayment(deposit)">déplacer</span>) - <mat-icon color="accent"
-                (click)="openPaymentDialog(deposit)" matTooltip="Voir le détail du paiement" color="accent"
-                class="pointer">visibility</mat-icon>
-            </td>
-            <td class="mat-mdc-cell mdc-data-table__cell  td-price ">
-              - {{deposit.paymentAmount|number}} €
-            </td>
-          </ng-container>
-        </tr>
-      </ng-container>
-      <tr class="mat-mdc-row mdc-data-table__row ">
-        <td class="mat-mdc-cell mdc-data-table__cell ">Reste à payer
-        </td>
-        <td class="mat-mdc-cell mdc-data-table__cell  td-price ">{{getRemainingToPay()}} €
-        </td>
-      </tr>
-    </table>
-  </fieldset>
+    </ng-container>
+    <tr class="mat-mdc-row mdc-data-table__row ">
+      <td class="mat-mdc-cell mdc-data-table__cell ">Reste à payer
+      </td>
+      <td class="mat-mdc-cell mdc-data-table__cell  td-price ">{{getRemainingToPay()}} €
+      </td>
+    </tr>
+  </table>
 </div>
