--- a/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
             <mat-icon color="accent" matTooltip="Déplacer le widget">zoom_out_map</mat-icon>
           </div>
         </div><ordering-list class="dashboard-box-component" *ngIf="item==ORDERS_AWAITING_DEPOSIT"
-        [orderingSearch]="orderingSearchToAwaitingDeposit" [isForDashboard]="true"></ordering-list>
+          [orderingSearch]="orderingSearchToAwaitingDeposit" [isForDashboard]="true"></ordering-list>
         <provision-list class="dashboard-box-component" *ngIf="item==AFFAIRE_IN_PROGRESS"
           [affaireSearch]="affaireSearchInProgress" [isForDashboard]="true"></provision-list>
         <provision-list class="dashboard-box-component" *ngIf="item==AFFAIRE_TO_DO" [affaireSearch]="affaireSearchToDo"
@@ -34,6 +34,8 @@
           [affaireSearch]="affaireSearchResponsibleInProgress" [isForDashboard]="true"></provision-list>
         <ordering-list class="dashboard-box-component" *ngIf="item==ORDER_OPEN" [orderingSearch]="orderingSearchOpen"
           [isForDashboard]="true"></ordering-list>
+        <ordering-list class="dashboard-box-component" *ngIf="item==ALL_ORDER_OPEN"
+          [orderingSearch]="orderingSearchAllOpen" [isForDashboard]="true"></ordering-list>
         <ordering-list class="dashboard-box-component" *ngIf="item==ORDER_BEING_PROCESSED"
           [orderingSearch]="orderingSearchBeingProcessed" [isForDashboard]="true"></ordering-list>
         <ordering-list class="dashboard-box-component" *ngIf="item==ORDER_TO_BILLED"
