--- a/client/src/app/modules/tiers/components/tiers/tiers.component.html
+++ b/client/src/app/modules/tiers/components/tiers/tiers.component.html
@@ -64,3 +64,7 @@
   (click)="openSearch()">
   <mat-icon>search</mat-icon>
 </button>
+<button matTooltip="Supprimer le tiers" mat-fab color="warn" class="third-fab-button"
+  *ngIf="editMode==false &&  tiers.id" (click)="deleteTiers()">
+  <mat-icon>delete</mat-icon>
+</button>
